--- a/environment.yml
+++ b/environment.yml
@@ -2,19 +2,314 @@ name: advec
 channels:
   - conda-forge
 dependencies:
-  - python
-  - numpy
-  - gdal
-  - rasterio
-  - matplotlib
-  - xarray
-  - dask
-  - netCDF
-  - bottleneck
-  - rioxarray
-  - cfgrib
-  - wradlib
-  - joblib
-  - boto3
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - affine=2.4.0=pyhd8ed1ab_0
+  - alsa-lib=1.2.12=h4ab18f5_0
+  - attr=2.5.1=h166bdaf_1
+  - attrs=23.2.0=pyh71513ae_0
+  - aws-c-auth=0.7.22=h96bc93b_2
+  - aws-c-cal=0.6.14=h88a6e22_1
+  - aws-c-common=0.9.19=h4ab18f5_0
+  - aws-c-compression=0.2.18=h83b837d_6
+  - aws-c-event-stream=0.4.2=ha47c788_12
+  - aws-c-http=0.8.1=h29d6fba_17
+  - aws-c-io=0.14.8=h21d4f22_5
+  - aws-c-mqtt=0.10.4=h759edc4_4
+  - aws-c-s3=0.5.9=h594631b_3
+  - aws-c-sdkutils=0.1.16=h83b837d_2
+  - aws-checksums=0.1.18=h83b837d_6
+  - aws-crt-cpp=0.26.9=he3a8b3b_0
+  - aws-sdk-cpp=1.11.329=hba8bd5f_3
+  - azure-core-cpp=1.11.1=h91d86a7_1
+  - azure-identity-cpp=1.6.0=hf1915f5_1
+  - azure-storage-blobs-cpp=12.10.0=h00ab1b0_1
+  - azure-storage-common-cpp=12.5.0=h94269e2_4
+  - blosc=1.21.5=hc2324a3_1
+  - bokeh=3.4.1=pyhd8ed1ab_0
+  - boto3=1.34.131=pyhd8ed1ab_0
+  - botocore=1.34.131=pyge310_1234567_0
+  - bottleneck=1.3.8=py312hc7c0aa3_0
+  - brotli=1.1.0=hd590300_1
+  - brotli-bin=1.1.0=hd590300_1
+  - brotli-python=1.1.0=py312h30efb56_1
+  - bzip2=1.0.8=hd590300_5
+  - c-ares=1.28.1=hd590300_0
+  - ca-certificates=2024.6.2=hbcca054_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cairo=1.18.0=h3faef2a_0
+  - cartopy=0.23.0=py312h1d6d2e6_1
+  - certifi=2024.6.2=pyhd8ed1ab_0
+  - cffi=1.16.0=py312hf06ca03_0
+  - cfgrib=0.9.12.0=pyhd8ed1ab_0
+  - cfitsio=4.4.0=hbdc6101_1
+  - cftime=1.6.4=py312h085067d_0
+  - charset-normalizer=3.3.2=pyhd8ed1ab_0
+  - click=8.1.7=unix_pyh707e725_0
+  - click-plugins=1.1.1=py_0
+  - cligj=0.7.2=pyhd8ed1ab_1
+  - cloudpickle=3.0.0=pyhd8ed1ab_0
+  - cmweather=0.3.2=pyhd8ed1ab_0
+  - contourpy=1.2.1=py312h8572e83_0
+  - cycler=0.12.1=pyhd8ed1ab_0
+  - cytoolz=0.12.3=py312h98912ed_0
+  - dask=2024.5.2=pyhd8ed1ab_0
+  - dask-core=2024.5.2=pyhd8ed1ab_0
+  - dask-expr=1.1.2=pyhd8ed1ab_0
+  - dbus=1.13.6=h5008d03_3
+  - deprecation=2.1.0=pyh9f0ad1d_0
+  - distributed=2024.5.2=pyhd8ed1ab_0
+  - eccodes=2.35.0=he84ddb8_0
+  - expat=2.6.2=h59595ed_0
+  - findlibs=0.0.5=pyhd8ed1ab_0
+  - fmt=10.2.1=h00ab1b0_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_2
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.53.0=py312h9a8786e_0
+  - freeglut=3.2.2=hac7e632_2
+  - freetype=2.12.1=h267a509_2
+  - freexl=2.0.0=h743c826_0
+  - fsspec=2024.6.0=pyhff2d567_0
+  - gdal=3.9.0=py312h86af8fa_5
+  - geos=3.12.1=h59595ed_0
+  - geotiff=1.7.3=h928be8b_0
+  - gettext=0.22.5=h59595ed_2
+  - gettext-tools=0.22.5=h59595ed_2
+  - gflags=2.2.2=he1b5a44_1004
+  - giflib=5.2.2=hd590300_0
+  - glib=2.80.2=hf974151_0
+  - glib-tools=2.80.2=hb6ce0ca_0
+  - glog=0.7.0=hed5481d_0
+  - graphite2=1.3.13=h59595ed_1003
+  - gst-plugins-base=1.24.4=h9ad1361_0
+  - gstreamer=1.24.4=haf2f30d_0
+  - h5netcdf=1.3.0=pyhd8ed1ab_0
+  - h5py=3.11.0=nompi_py312hb7ab980_102
+  - harfbuzz=8.5.0=hfac3d4d_0
+  - hdf4=4.2.15=h2a13503_7
+  - hdf5=1.14.3=nompi_hdf9ad27_104
+  - icu=73.2=h59595ed_0
+  - idna=3.7=pyhd8ed1ab_0
+  - importlib-metadata=7.1.0=pyha770c72_0
+  - importlib_metadata=7.1.0=hd8ed1ab_0
+  - jasper=4.2.4=h536e39c_0
+  - jinja2=3.1.4=pyhd8ed1ab_0
+  - jmespath=1.0.1=pyhd8ed1ab_0
+  - joblib=1.4.2=pyhd8ed1ab_0
+  - json-c=0.17=h7ab15ed_0
+  - kealib=1.5.3=hee9dde6_1
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.5=py312h8572e83_1
+  - krb5=1.21.2=h659d440_0
+  - lame=3.100=h166bdaf_1003
+  - lat_lon_parser=1.3.0=pyhd8ed1ab_0
+  - lcms2=2.16=hb7c19ff_0
+  - ld_impl_linux-64=2.40=hf3520f5_2
+  - lerc=4.0.0=h27087fc_0
+  - libabseil=20240116.2=cxx17_h59595ed_0
+  - libaec=1.1.3=h59595ed_0
+  - libarchive=3.7.4=hfca40fe_0
+  - libarrow=16.1.0=hcb6531f_6_cpu
+  - libarrow-acero=16.1.0=hac33072_6_cpu
+  - libarrow-dataset=16.1.0=hac33072_6_cpu
+  - libarrow-substrait=16.1.0=h7e0c224_6_cpu
+  - libasprintf=0.22.5=h661eb56_2
+  - libasprintf-devel=0.22.5=h661eb56_2
+  - libblas=3.9.0=22_linux64_openblas
+  - libboost-headers=1.85.0=ha770c72_1
+  - libbrotlicommon=1.1.0=hd590300_1
+  - libbrotlidec=1.1.0=hd590300_1
+  - libbrotlienc=1.1.0=hd590300_1
+  - libcap=2.69=h0f662aa_0
+  - libcblas=3.9.0=22_linux64_openblas
+  - libclang-cpp15=15.0.7=default_h127d8a8_5
+  - libclang13=18.1.7=default_h087397f_0
+  - libcrc32c=1.1.2=h9c3ff4c_0
+  - libcups=2.3.3=h4637d8d_4
+  - libcurl=8.8.0=hca28451_0
+  - libdeflate=1.20=hd590300_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=hd590300_2
+  - libevent=2.1.12=hf998b51_1
+  - libexpat=2.6.2=h59595ed_0
+  - libffi=3.4.2=h7f98852_5
+  - libflac=1.4.3=h59595ed_0
+  - libgcc-ng=13.2.0=h77fa898_7
+  - libgcrypt=1.10.3=hd590300_0
+  - libgdal=3.9.0=h77540a9_5
+  - libgettextpo=0.22.5=h59595ed_2
+  - libgettextpo-devel=0.22.5=h59595ed_2
+  - libgfortran-ng=13.2.0=h69a702a_7
+  - libgfortran5=13.2.0=hca663fb_7
+  - libglib=2.80.2=hf974151_0
+  - libglu=9.0.0=hac7e632_1003
+  - libgomp=13.2.0=h77fa898_7
+  - libgoogle-cloud=2.24.0=h2736e30_0
+  - libgoogle-cloud-storage=2.24.0=h3d9a0c8_0
+  - libgpg-error=1.49=h4f305b6_0
+  - libgrpc=1.62.2=h15f2491_0
+  - libiconv=1.17=hd590300_2
+  - libjpeg-turbo=3.0.0=hd590300_1
+  - libkml=1.3.0=h01aab08_1018
+  - liblapack=3.9.0=22_linux64_openblas
+  - libllvm15=15.0.7=hb3ce162_4
+  - libllvm18=18.1.7=hb77312f_0
+  - libnetcdf=4.9.2=nompi_h9612171_113
+  - libnghttp2=1.58.0=h47da74e_1
+  - libnsl=2.0.1=hd590300_0
+  - libogg=1.3.4=h7f98852_1
+  - libopenblas=0.3.27=pthreads_h413a1c8_0
+  - libopus=1.3.1=h7f98852_1
+  - libparquet=16.1.0=h6a7eafb_6_cpu
+  - libpng=1.6.43=h2797004_0
+  - libpq=16.3=ha72fbe1_0
+  - libprotobuf=4.25.3=h08a7969_0
+  - libre2-11=2023.09.01=h5a48ba9_2
+  - librttopo=1.1.0=h8917695_15
+  - libsndfile=1.2.2=hc60ed4a_1
+  - libspatialite=5.1.0=h5539517_6
+  - libsqlite=3.45.3=h2797004_0
+  - libssh2=1.11.0=h0841786_0
+  - libstdcxx-ng=13.2.0=hc0a3c3a_7
+  - libsystemd0=255=h3516f8a_1
+  - libthrift=0.19.0=hb90f79a_1
+  - libtiff=4.6.0=h1dd3fc0_3
+  - libutf8proc=2.8.0=h166bdaf_0
+  - libuuid=2.38.1=h0b41bf4_0
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libwebp-base=1.4.0=hd590300_0
+  - libxcb=1.15=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxkbcommon=1.7.0=h662e7e4_0
+  - libxml2=2.12.7=hc051c1a_1
+  - libzip=1.10.1=h2629f0a_3
+  - libzlib=1.3.1=h4ab18f5_1
+  - locket=1.0.0=pyhd8ed1ab_0
+  - lz4=4.3.3=py312h03f37cb_0
+  - lz4-c=1.9.4=hcb278e6_0
+  - lzo=2.10=hd590300_1001
+  - markupsafe=2.1.5=py312h98912ed_0
+  - matplotlib=3.8.4=py312h7900ff3_2
+  - matplotlib-base=3.8.4=py312h20ab3a6_2
+  - minizip=4.0.6=h9d307f2_0
+  - mpg123=1.32.6=h59595ed_0
+  - msgpack-python=1.0.8=py312h2492b07_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mysql-common=8.3.0=hf1915f5_4
+  - mysql-libs=8.3.0=hca2cd23_4
+  - ncurses=6.5=h59595ed_0
+  - netcdf4=1.6.5=nompi_py312h39d4375_102
+  - nspr=4.35=h27087fc_0
+  - nss=3.100=hca3bf56_0
+  - numpy=1.26.4=py312heda63a1_0
+  - openjpeg=2.5.2=h488ebb8_0
+  - openssl=3.3.1=h4ab18f5_0
+  - orc=2.0.1=h17fec99_1
+  - packaging=24.1=pyhd8ed1ab_0
+  - pandas=2.2.2=py312h1d6d2e6_1
+  - partd=1.4.2=pyhd8ed1ab_0
+  - pcre2=10.43=hcad00b1_0
+  - pillow=10.3.0=py312hdcec9eb_0
+  - pip=24.0=pyhd8ed1ab_0
+  - pixman=0.43.2=h59595ed_0
+  - ply=3.11=pyhd8ed1ab_2
+  - poppler=24.04.0=hb6cd0d7_0
+  - poppler-data=0.4.12=hd8ed1ab_0
+  - postgresql=16.3=h8e811e2_0
+  - proj=9.4.0=h1d62c97_1
+  - psutil=5.9.8=py312h98912ed_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - pulseaudio-client=17.0=hb77b528_0
+  - pyarrow=16.1.0=py312h9cebb41_3
+  - pyarrow-core=16.1.0=py312h70856f0_3_cpu
+  - pyarrow-hotfix=0.6=pyhd8ed1ab_0
+  - pycparser=2.22=pyhd8ed1ab_0
+  - pyparsing=3.1.2=pyhd8ed1ab_0
+  - pyproj=3.6.1=py312h5d05ceb_7
+  - pyqt=5.15.9=py312h949fe66_5
+  - pyqt5-sip=12.12.2=py312h30efb56_5
+  - pyshp=2.3.1=pyhd8ed1ab_0
+  - pysocks=1.7.1=pyha2e5f31_6
+  - python=3.12.3=hab00c5b_0_cpython
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python-eccodes=1.7.0=py312h085067d_2
+  - python-tzdata=2024.1=pyhd8ed1ab_0
+  - python_abi=3.12=4_cp312
+  - pytz=2024.1=pyhd8ed1ab_0
+  - pyyaml=6.0.1=py312h98912ed_1
+  - qt-main=5.15.8=hc9dc06e_21
+  - rasterio=1.3.10=py312hc022a17_4
+  - re2=2023.09.01=h7f4b329_2
+  - readline=8.2=h8228510_1
+  - requests=2.32.3=pyhd8ed1ab_0
+  - rioxarray=0.15.5=pyhd8ed1ab_0
+  - s2n=1.4.15=he19d79f_0
+  - s3transfer=0.10.1=pyhd8ed1ab_0
+  - scipy=1.13.1=py312hc2bc53b_0
+  - setuptools=70.0.0=pyhd8ed1ab_0
+  - shapely=2.0.4=py312ha5b4d35_1
+  - sip=6.7.12=py312h30efb56_0
+  - six=1.16.0=pyh6c4a22f_0
+  - snappy=1.2.0=hdb0a2a9_1
+  - snuggs=1.4.7=py_0
+  - sortedcontainers=2.4.0=pyhd8ed1ab_0
+  - spdlog=1.13.0=hd2e6256_0
+  - sqlite=3.45.3=h2c6b66d_0
+  - tblib=3.0.0=pyhd8ed1ab_0
+  - tiledb=2.23.0=hfa691db_2
+  - tk=8.6.13=noxft_h4845f30_101
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - toolz=0.12.1=pyhd8ed1ab_0
+  - tornado=6.4.1=py312h9a8786e_0
+  - tzcode=2024a=h3f72095_0
+  - tzdata=2024a=h0c530f3_0
+  - uriparser=0.9.8=hac33072_0
+  - urllib3=2.2.1=pyhd8ed1ab_0
+  - wheel=0.43.0=pyhd8ed1ab_1
+  - wradlib=2.0.3=pyhd8ed1ab_0
+  - xarray=2024.5.0=pyhd8ed1ab_0
+  - xarray-datatree=0.0.14=pyhd8ed1ab_0
+  - xcb-util=0.4.0=hd590300_1
+  - xcb-util-image=0.4.0=h8ee46fc_1
+  - xcb-util-keysyms=0.4.0=h8ee46fc_1
+  - xcb-util-renderutil=0.3.9=hd590300_1
+  - xcb-util-wm=0.4.1=h8ee46fc_1
+  - xerces-c=3.2.5=hac6953d_0
+  - xkeyboard-config=2.42=h4ab18f5_0
+  - xmltodict=0.13.0=pyhd8ed1ab_0
+  - xorg-fixesproto=5.0=h7f98852_1002
+  - xorg-inputproto=2.3.2=h7f98852_1002
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.1.1=hd590300_0
+  - xorg-libsm=1.2.4=h7391055_0
+  - xorg-libx11=1.8.9=h8ee46fc_0
+  - xorg-libxau=1.0.11=hd590300_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxfixes=5.0.3=h7f98852_1004
+  - xorg-libxi=1.7.10=h7f98852_0
+  - xorg-libxrender=0.9.11=hd590300_0
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
+  - xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
+  - xradar=0.5.0=pyhd8ed1ab_0
+  - xyzservices=2024.6.0=pyhd8ed1ab_0
+  - xz=5.2.6=h166bdaf_0
+  - yaml=0.2.5=h7f98852_2
+  - zict=3.0.0=pyhd8ed1ab_0
+  - zipp=3.19.2=pyhd8ed1ab_0
+  - zlib=1.3.1=h4ab18f5_1
+  - zstd=1.5.6=ha6fb4c9_0
   - pip:
-    - geopy
+      - cython==3.0.10
+      - geographiclib==2.0
+      - geopy==2.4.1
+
